# ILA_Gemmini

./: .gitmodules  CMakeLists.txt  README.md
app/: main.cc  test-config-load.cc  test-mvin.cc
include/Gemmini/: Gemmini.h  execute.h  gemmini_base.h  gemmini_load.h  gemmini_store.h  load.h  loop_conv_ws.h  loop_ws.h  statevars.h  store.h  uninterpreted_func.h  utils.h
script/: define_chisel_field_widths.py  gen_cmakelists.py  gen_testbenches.py  setup_sim_folder.py  test_runner.sh
sim_infra/: CMakeLists.txt  gemmini_testbench.h  test_runner.sh
sim_infra/include/: gemmini.h  gemmini_nn.h  gemmini_testutils.h
sim_infra/rocc-software/src/: xcustom.h
sim_tests/: aligned_tb.cc  conv_dw_perf_tb.cc  conv_dw_tb.cc  conv_first_layer_tb.cc  conv_perf_tb.cc  conv_rect_tb.cc  conv_tb.cc  conv_trans_input_3120_tb.cc  conv_trans_input_3120_with_kernel_dilation_tb.cc  conv_trans_output_1203_tb.cc  conv_trans_weight_0132_tb.cc  conv_trans_weight_1203_tb.cc  conv_with_input_dilation_and_neg_padding_tb.cc  conv_with_input_dilation_and_rot180_tb.cc  conv_with_input_dilation_tb.cc  conv_with_kernel_dilation_tb.cc  conv_with_pool_tb.cc  conv_with_rot180_tb.cc  gemmini_counter_tb.cc  global_average_tb.cc  matmul_os_tb.cc  matmul_tb.cc  matmul_ws_tb.cc  matrix_add_tb.cc  mobilenet_conv_tb.cc  mobilenet_matmul_tb.cc  mobilenet_tb.cc  mvin_mvout_acc_full_stride_tb.cc  mvin_mvout_acc_full_tb.cc  mvin_mvout_acc_stride_tb.cc  mvin_mvout_acc_tb.cc  mvin_mvout_acc_zero_stride_tb.cc  mvin_mvout_block_stride_tb.cc  mvin_mvout_stride_tb.cc  mvin_mvout_tb.cc  mvin_mvout_zeros_tb.cc  mvin_scale_tb.cc  padded_tb.cc  raw_hazard_tb.cc  resadd_tb.cc  (+17 more)
src/: execute.cc  gemmini-top.cc  load.cc  loop_conv_ws.cc  loop_ws.cc  store.cc  utils.cc
uninterpreted_func/: uninterpreted_func.cc
